fix: text alignement, font size

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -7,7 +7,7 @@
   /* font sizes */
   --mt-cards-title-font-size: 21px;
   --mt-cards-text-font-size: 14px;
-  --mt-cards-callout-text-font-size: var(--mt-body-font-size-s);
+  --mt-cards-callout-text-font-size: 12px;
 
   /* font family */
   --mt-cards-font-family: var(--mt-body-font-family);
@@ -177,8 +177,22 @@
 
 .cards-card-body > p {
   font-weight: var(--mt-font-weight-regular);
-  font-size: var(--mt-font-size-100);
+  font-size: var(--mt-cards-text-font-size);
+  font-family: var(--mt-cards-font-family);
+  line-height: 1.5em;
   color: var(--mt-cards-text-color);
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+.cards-card-body > p:first-of-type,
+.cards-card-body strong {
+  font-weight: var(--mt-font-weight-bold);
+  font-size: var(--mt-cards-title-font-size);
+  font-family: var(--mt-cards-font-family);
+  color: var(--mt-cards-title-font-color);
+  line-height: 1.2;
+  text-align: center;
   margin-bottom: 25px;
 }
 
